add memory mode and add restriction on files naming

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -368,6 +368,7 @@ DecrementAndGetAtomic=decrementAndGet
 GetAndDecrementAtomic=getAndDecrement
 GetAndSetAtomic=getAndSet
 FileIsFile=isFile
+FileRoots=roots
 FormatType=$core.Formatting
 GetPriority=getPriority
 AtomicBoolean=$core.AtomicBoolean
