--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -355,6 +355,7 @@ CurrentThread=tacheCourante
 ThreadCurrentTime=instant
 FileIsDirectory=estDossier
 FileIsFile=estFichier
+FileRoots=racines
 FileGetParentPath=chParent
 JoinOthers=attendreAutres
 SetAtomic=majValeur
