--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -474,6 +474,7 @@ FileReadBin=readBin
 FileWriteBin=writeBin
 FileDelete=delete
 FileRename=renameTo
+FileDir=dir
 DefaultPkg=$core
 FalseString=false
 TrueString=true
@@ -1013,6 +1014,7 @@ File0FileWriteBin1=b
 File0ThreadSetRemove0=a
 File0FileRename0=a
 File0FileRename1=b
+File0FileDir0=a
 File0AppendToFile0=a
 File0AppendToFile1=b
 File0FileAbsolutePath0=a
