add memory mode and add restriction on files naming

--- a/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/en/unit/simplefilesframe.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/en/unit/simplefilesframe.properties
@@ -4,12 +4,16 @@ open=Open
 status=Status
 stop=Stop
 configuration=Configuration
+launchByFile=Launch by file
 launch=Launch
 tests=Tests
 method=Method
 number=Number
 params=Parameters
 success=Success
+failLoad=Fail Load {0}
+successLoad=Successful Load {0}
 fail=Fail
+folder=Folder
 src=Sources
 files=Data
