--- a/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/fr/unit/simplefilesframe.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/fr/unit/simplefilesframe.properties
@@ -4,12 +4,16 @@ open=Ouvrir
 status=Statut
 stop=Stop
 configuration=Configuration
+launchByFile=Lancer par fichier
 launch=Lancer
 tests=Tests
 method=M&eacute;thode
 number=Num&eacute;ro
 params=Param&egrave;tres
 success=Succ&egrave;s
+failLoad=Chargement &Eacute;chou&eacute; {0}
+successLoad=Chargement r&eacute;ussi {0}
 fail=&Eacute;chec
+folder=Dossier
 src=Sources
 files=Donn&eacute;es
