--- a/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/fr/unit/simplefilesframe.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/fr/unit/simplefilesframe.properties
@@ -12,6 +12,9 @@ number=Num&eacute;ro
 params=Param&egrave;tres
 success=Succ&egrave;s
 failLoad=Chargement &Eacute;chou&eacute; {0}
+failLoadThread=Chargement &Eacute;chou&eacute; {0} &agrave; cause d''une tache active
+failLoadPath=Chargement &Eacute;chou&eacute;{0} &agrave; cause que {1} n''est pas absolu
+failLoadContent=Chargement &Eacute;chou&eacute; {0} &agrave; cause d''erreur de lecture
 successLoad=Chargement r&eacute;ussi {0}
 fail=&Eacute;chec
 folder=Dossier
