--- a/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/en/unit/simplefilesframe.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguageunit/src/main/resources/resources_unit/gui/messages/en/unit/simplefilesframe.properties
@@ -12,6 +12,9 @@ number=Number
 params=Parameters
 success=Success
 failLoad=Fail Load {0}
+failLoadThread=Fail Load {0} because of living thread
+failLoadPath=Fail Load {0} because {1} is not absolute
+failLoadContent=Fail Load {0} because of error of reading
 successLoad=Successful Load {0}
 fail=Fail
 folder=Folder
