add assertFalse in functions

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -413,6 +413,7 @@ Start=start
 ExecuteConvert=convert
 AssertAssert=assert
 AssertAssertTrue=assertTrue
+AssertAssertFalse=assertFalse
 DifferenceStackDiff=stackDiff
 AssertAssertSame=assertSame
 ExecuteSetupNoException=setupNoException
@@ -1083,6 +1084,7 @@ Assert3AssertAssert1=b
 Assert4AssertAssert0=a
 Assert4AssertAssert1=b
 Assert0AssertAssertTrue0=a
+Assert0AssertAssertFalse0=a
 Assert0AssertAssertNull0=a
 Assert0AssertAssertNotNull0=a
 Assert0AssertAssertSame0=a
