--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -321,6 +321,7 @@ RotateLeft=rotGauche
 IllegalThreadStateException=$coeur.IllegalEtatTache
 InfoTestCount=nb
 AssertAssertTrue=assertVrai
+AssertAssertFalse=assertFaux
 InfoTestCurrentMethod=methodCourante
 DifferenceFoundNull=trouveNull
 ConcurrentError=$coeur.ErreurConcurrentielle
@@ -1083,6 +1084,7 @@ Assert3AssertAssert1=b
 Assert4AssertAssert0=a
 Assert4AssertAssert1=b
 Assert0AssertAssertTrue0=a
+Assert0AssertAssertFalse0=a
 Assert0AssertAssertNull0=a
 Assert0AssertAssertNotNull0=a
 Assert0AssertAssertSame0=a
