add cache for wrappers

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -207,6 +207,7 @@ GetDeclaredFields=getDeclaredFields
 GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
 GetDeclaredAnonymousLambda=getDeclaredAnonymousLambda
 GetDeclaredAnonymousLambdaLocalVars=getDeclaredAnonymousLambdaLocVars
+GetDeclaredAnonymousLambdaWrapVars=getDeclaredAnonymousLambdaWrapVars
 GetDeclaredAnonymousLambdaLoopVars=getDeclaredAnonymousLambdaLoopVars
 GetDeclaredLocalTypes=getDeclaredLocalTypes
 GetDeclaredBlocks=getDeclaredBlocks
