--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -208,6 +208,7 @@ GetDeclaredFields=valChampsDeclares
 GetDeclaredAnonymousTypes=valTypesAnonymesDeclares
 GetDeclaredAnonymousLambda=valLambdaAnonymesDeclares
 GetDeclaredAnonymousLambdaLocalVars=valLocalVarsLambdaAnonymesDeclares
+GetDeclaredAnonymousLambdaWrapVars=valEnvelVarsLambdaAnonymesDeclares
 GetDeclaredAnonymousLambdaLoopVars=valBoucleVarsLambdaAnonymesDeclares
 GetDeclaredLocalTypes=valLocalTypesDeclares
 GetDeclaredBlocks=valBlocsDeclares
