--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -943,6 +943,7 @@ Method0Invoke0=a
 Method0Invoke1=b
 Method0InvokeDirect0=a
 Method0InvokeDirect1=b
+Method0GetDeclaredAnonymousLambdaLocalVarsNb0=a
 Method0GetDeclaredAnonymousLambdaLocalVars0=a
 Method0GetDeclaredAnonymousLambdaLocalVars1=b
 Method0GetDeclaredAnonymousLambdaLocalVars2=c
