add concurrent string maps

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -466,6 +466,24 @@ FileZippedText=zippedText
 FileZipBin=zipBinary
 FileZipBinArray=zipBinaryArray
 FileZipText=zipText
+TableStringObject=$core.StringObjectTable
+TableConcEmpty=emp
+TableConcSize=size
+TableConcKeys=keys
+TableConcValues=values
+TableConcHasKey=hasKey
+TableConcHasValue=hasValue
+TableConcPairs=pairs
+TableConcPut=put
+TableConcPutAbs=putAbs
+TableConcGet=get
+TableConcRemove=remove
+TableConcReplace=replace
+TableConcClear=clear
+TableConcPutAll=putAll
+EntryStringObject=$core.StringObjectEntry
+TableEntryKey=key
+TableEntryValue=value
 EntryBinary=$core.BinaryEntry
 EntryText=$core.TextEntry
 EntryName=name
@@ -1002,6 +1020,19 @@ AtomicLong0LazySetAtomic0=a
 AtomicLong0AddAndGetAtomic0=a
 AtomicLong0GetAndAddAtomic0=a
 AtomicLong0AtomicLong0=a
+TableStringObject0ConcKeys0=a
+TableStringObject0ConcHasKey0=a
+TableStringObject0ConcHasValue0=a
+TableStringObject0Get0=a
+TableStringObject0Remove0=a
+TableStringObject0PutAll0=a
+TableStringObject0Put0=a
+TableStringObject0Put1=b
+TableStringObject0PutAbs0=a
+TableStringObject0PutAbs1=b
+TableStringObject0Replace0=a
+TableStringObject0Replace1=b
+EntryStringObject0TableEntryValue0=a
 EntryBinary0EntryBinary0=a
 EntryBinary0EntryBinary1=b
 EntryBinary0EntryTime0=a
