--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -466,6 +466,24 @@ FileZippedText=archiveTexte
 FileZipBin=archBin
 FileZipBinArray=archBinTab
 FileZipText=archTexte
+TableStringObject=$coeur.TableChaineObjet
+TableConcEmpty=vi
+TableConcSize=taille
+TableConcKeys=cles
+TableConcValues=valeurs
+TableConcHasKey=aCle
+TableConcHasValue=aValeur
+TableConcPairs=paires
+TableConcPut=mettre
+TableConcPutAbs=mettreAbs
+TableConcGet=val
+TableConcRemove=suppr
+TableConcReplace=remplacer
+TableConcClear=vider
+TableConcPutAll=mettreTout
+EntryStringObject=$coeur.EltChaineObjet
+TableEntryKey=cle
+TableEntryValue=valeur
 EntryBinary=$coeur.EltArchBinaire
 EntryText=$coeur.EltArchTexte
 EntryName=nom
@@ -1002,6 +1020,19 @@ AtomicLong0LazySetAtomic0=a
 AtomicLong0AddAndGetAtomic0=a
 AtomicLong0GetAndAddAtomic0=a
 AtomicLong0AtomicLong0=a
+TableStringObject0ConcKeys0=a
+TableStringObject0ConcHasKey0=a
+TableStringObject0ConcHasValue0=a
+TableStringObject0Get0=a
+TableStringObject0Remove0=a
+TableStringObject0PutAll0=a
+TableStringObject0Put0=a
+TableStringObject0Put1=b
+TableStringObject0PutAbs0=a
+TableStringObject0PutAbs1=b
+TableStringObject0Replace0=a
+TableStringObject0Replace1=b
+EntryStringObject0TableEntryValue0=a
 EntryBinary0EntryBinary0=a
 EntryBinary0EntryBinary1=b
 EntryBinary0EntryTime0=a
