display duration for every test

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -407,6 +407,7 @@ ExecutedTestAfter=apres
 ExecuteExecute=executer
 ExecutedTestMethod=methode
 ParametersMethod=methode
+ResultTime=duree
 ResultSuccess=succes
 ResultParams=params
 ParametersLocation=location
@@ -1101,11 +1102,14 @@ Execute0Run1=b
 Execute0Run2=c
 Execute0ExecuteConvert0=a
 Execute0ExecuteSetupNoException0=a
+Execute0ExecuteSetupNoException1=b
 Execute0ExecuteSetupError0=a
 Execute0ExecuteSetupError1=b
 Execute0ExecuteSetupError2=c
+Execute0ExecuteSetupError3=d
 Execute1ExecuteSetupError0=a
 Execute1ExecuteSetupError1=b
+Execute1ExecuteSetupError2=c
 Assert0AssertAssert0=a
 Assert0AssertAssert1=b
 Assert1AssertAssert0=a
