add operations about double numbers and assert functions

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -386,6 +386,10 @@ FileMakeDirs=acheminerDossiers
 ExecutedTest=$coeur.TestExecute
 LengthItrTa=longueur
 Difference=$coeur.Difference
+EltDifference=$coeur.EltDifference
+Index=indice
+AssertNot=assertNon
+AssertNotSame=assertNonMeme
 ExecutedTestTest=test
 TableVarSecond=U
 ExecutedTestBefore=avant
@@ -669,6 +673,8 @@ Resources0ReadResources0=a
 Resources0ReadResourcesIndex0=a
 Math0Abs0=a
 Math1Abs0=a
+Math2Abs0=a
+Math3Abs0=a
 Math0Max0=a
 Math0Max1=b
 Math1Max0=a
@@ -677,6 +683,14 @@ Math0Min0=a
 Math0Min1=b
 Math1Min0=a
 Math1Min1=b
+Math2Max0=a
+Math2Max1=b
+Math3Max0=a
+Math3Max1=b
+Math2Min0=a
+Math2Min1=b
+Math3Min0=a
+Math3Min1=b
 Math0Quot0=a
 Math0Quot1=b
 Math1Quot0=a
@@ -1120,17 +1134,76 @@ Assert3AssertAssert0=a
 Assert3AssertAssert1=b
 Assert4AssertAssert0=a
 Assert4AssertAssert1=b
+Assert5AssertAssertDouble0=a
+Assert5AssertAssertDouble1=b
+Assert5AssertAssertDouble2=c
+Assert0AssertAssertArr0=a
+Assert0AssertAssertArr1=b
+Assert1AssertAssertArr0=a
+Assert1AssertAssertArr1=b
+Assert2AssertAssertArr0=a
+Assert2AssertAssertArr1=b
+Assert3AssertAssertArr0=a
+Assert3AssertAssertArr1=b
+Assert4AssertAssertArr0=a
+Assert4AssertAssertArr1=b
+Assert5AssertAssertArrDouble0=a
+Assert5AssertAssertArrDouble1=b
+Assert5AssertAssertArrDouble2=c
+Assert0AssertAssertNot0=a
+Assert0AssertAssertNot1=b
+Assert1AssertAssertNot0=a
+Assert1AssertAssertNot1=b
+Assert2AssertAssertNot0=a
+Assert2AssertAssertNot1=b
+Assert3AssertAssertNot0=a
+Assert3AssertAssertNot1=b
+Assert4AssertAssertNot0=a
+Assert4AssertAssertNot1=b
+Assert5AssertAssertNotDouble0=a
+Assert5AssertAssertNotDouble1=b
+Assert5AssertAssertNotDouble2=c
+Assert0AssertAssertNotArr0=a
+Assert0AssertAssertNotArr1=b
+Assert1AssertAssertNotArr0=a
+Assert1AssertAssertNotArr1=b
+Assert2AssertAssertNotArr0=a
+Assert2AssertAssertNotArr1=b
+Assert3AssertAssertNotArr0=a
+Assert3AssertAssertNotArr1=b
+Assert4AssertAssertNotArr0=a
+Assert4AssertAssertNotArr1=b
+Assert5AssertAssertNotArrDouble0=a
+Assert5AssertAssertNotArrDouble1=b
+Assert5AssertAssertNotArrDouble2=c
 Assert0AssertAssertTrue0=a
 Assert0AssertAssertFalse0=a
 Assert0AssertAssertNull0=a
 Assert0AssertAssertNotNull0=a
 Assert0AssertAssertSame0=a
 Assert0AssertAssertSame1=b
+Assert0AssertAssertNotSame0=a
+Assert0AssertAssertNotSame1=b
 Assert5AssertAssert0=a
 Assert5AssertAssert1=b
 Assert5AssertAssert2=c
 Assert6AssertAssert0=a
 Assert6AssertAssert1=b
+Assert5AssertAssertArr0=a
+Assert5AssertAssertArr1=b
+Assert5AssertAssertArr2=c
+Assert6AssertAssertArr0=a
+Assert6AssertAssertArr1=b
+Assert5AssertAssertNot0=a
+Assert5AssertAssertNot1=b
+Assert5AssertAssertNot2=c
+Assert6AssertAssertNot0=a
+Assert6AssertAssertNot1=b
+Assert5AssertAssertNotArr0=a
+Assert5AssertAssertNotArr1=b
+Assert5AssertAssertNotArr2=c
+Assert6AssertAssertNotArr0=a
+Assert6AssertAssertNotArr1=b
 FormatType0Print0=a
 FormatType1Print0=a
 FormatType1Print1=b
