add seeds for random functions

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -258,6 +258,8 @@ SeedGenerator=$core.Generator
 SeedDoubleGenerator=$core.DoubleGenerator
 SeedGet=get
 Seed=seed
+SeedSpecGenerator=seedGenerator
+SeedSpecDoubleGenerator=seedDoubleGenerator
 EnumOrdinal=ordinal
 StackTraceElement=$core.Stack
 DefaultInstance=defaultInstance
@@ -810,6 +812,8 @@ Math1Gt0=a
 Math1Gt1=b
 Math0Random0=a
 Math0Seed0=a
+Math0SeedSpecGenerator0=a
+Math0SeedSpecDoubleGenerator0=a
 Byte0ToBinString0=a
 Byte0ToOctString0=a
 Byte0ToHexString0=a
