--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -254,6 +254,8 @@ SeedGenerator=$coeur.Generateur
 SeedDoubleGenerator=$coeur.GenerateurDec
 SeedGet=val
 Seed=graine
+SeedSpecGenerator=graineGenerateur
+SeedSpecDoubleGenerator=graineGenerateurDec
 Plus=plus
 BinMod=binMod
 Mult=mult
@@ -810,6 +812,8 @@ Math1Gt0=a
 Math1Gt1=b
 Math0Random0=a
 Math0Seed0=a
+Math0SeedSpecGenerator0=a
+Math0SeedSpecDoubleGenerator0=a
 Byte0ToBinString0=a
 Byte0ToOctString0=a
 Byte0ToHexString0=a
