add native random functions

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -250,6 +250,7 @@ Ge=gqe
 BinQuot=binQuot
 Xor=ouExc
 Random=alea
+NativeRandom=natAlea
 SeedGenerator=$coeur.Generateur
 SeedDoubleGenerator=$coeur.GenerateurDec
 SeedGet=val
@@ -811,6 +812,7 @@ Math1Lt1=b
 Math1Gt0=a
 Math1Gt1=b
 Math0Random0=a
+Math0NativeRandom0=a
 Math0Seed0=a
 Math0SeedSpecGenerator0=a
 Math0SeedSpecDoubleGenerator0=a
