--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -254,6 +254,7 @@ Neg=neg
 EnumName=name
 Le=le
 Random=random
+NativeRandom=natRandom
 SeedGenerator=$core.Generator
 SeedDoubleGenerator=$core.DoubleGenerator
 SeedGet=get
@@ -811,6 +812,7 @@ Math1Lt1=b
 Math1Gt0=a
 Math1Gt1=b
 Math0Random0=a
+Math0NativeRandom0=a
 Math0Seed0=a
 Math0SeedSpecGenerator0=a
 Math0SeedSpecDoubleGenerator0=a
