add switch expressions

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -211,6 +211,7 @@ GetDeclaredAnonymousLambdaLocalVarsNb=getDeclaredAnonymousLambdaWrapVarsNb
 GetDeclaredAnonymousLambdaLoopVars=getDeclaredAnonymousLambdaLoopVars
 GetDeclaredLocalTypes=getDeclaredLocalTypes
 GetDeclaredBlocks=getDeclaredBlocks
+GetDeclaredSwitchMethods=getDeclaredSwitchMethods
 MakeGeneric=makeGeneric
 GetDeclaredConstructors=getDeclaredConstructors
 GetAllClasses=getAllClasses
