--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -212,6 +212,7 @@ GetDeclaredAnonymousLambdaLocalVarsNb=valEnvelVarsLambdaAnonymesDeclaresNb
 GetDeclaredAnonymousLambdaLoopVars=valBoucleVarsLambdaAnonymesDeclares
 GetDeclaredLocalTypes=valLocalTypesDeclares
 GetDeclaredBlocks=valBlocsDeclares
+GetDeclaredSwitchMethods=valMethodesSelon
 GetOperators=valOperateurs
 GetDeclaredConstructors=valConstructeursDeclares
 Constructor=$coeur.Constructeur
