--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -1007,6 +1007,10 @@ Annotated0GetDeclaredAnonymousLambda0=a
 Annotated0GetDeclaredAnonymousLambda1=b
 Annotated0GetDeclaredAnonymousLambda2=c
 Annotated0GetDeclaredAnonymousLambda3=d
+Annotated0GetDeclaredSwitchMethods0=a
+Annotated0GetDeclaredSwitchMethods1=b
+Annotated0GetDeclaredSwitchMethods2=c
+Annotated0GetDeclaredSwitchMethods3=d
 Thread0SetPriority0=a
 Thread0Sleep0=a
 Thread0Print0=a
