add lambda feature, refactor code

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -283,6 +283,7 @@ ErrorCurrentStack=current
 ArrayNewInstance=newArrayInstance
 StringUtil=$core.StringUtil
 GetParent=getParent
+GetFct=getFct
 GetFileName=getFileName
 GetPrettyName=getPrettyName
 GetPrettySingleName=getPrettySingleName
@@ -672,6 +673,7 @@ ObjectsUtil0SameRef1=b
 ObjectsUtil0GetParent0=a
 ObjectsUtil0SetParent0=a
 ObjectsUtil0SetParent1=b
+ObjectsUtil0GetFct0=a
 StringUtil0ValueOfMethod0=a
 Resources0ReadResources0=a
 Resources0ReadResourcesIndex0=a
