--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -263,6 +263,7 @@ BinMod=binMod
 Mult=mult
 Or=ou
 GetParent=valParent
+GetFct=valFct
 IsAbstract=estAbstrait
 GetGenericSuperClass=valGeneSuperClasse
 InvokeDirect=invoqueDirect
@@ -672,6 +673,7 @@ ObjectsUtil0SameRef1=b
 ObjectsUtil0GetParent0=a
 ObjectsUtil0SetParent0=a
 ObjectsUtil0SetParent1=b
+ObjectsUtil0GetFct0=a
 StringUtil0ValueOfMethod0=a
 Resources0ReadResources0=a
 Resources0ReadResourcesIndex0=a
