--- a/desktop/applis/standalones/standalones_expressionlanguagegui/pom.xml
+++ b/desktop/applis/standalones/standalones_expressionlanguagegui/pom.xml
@@ -19,6 +19,19 @@
 		<finalName>CDM</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
@@ -66,8 +79,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-            <groupId>expressionlanguagegui</groupId>
-            <artifactId>expressionlanguagegui</artifactId>
+            <groupId>def_standalones_expressionlanguagegui</groupId>
+            <artifactId>def_standalones_expressionlanguagegui</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
