--- a/desktop/applis/standalones/standalones_pokemon/pom.xml
+++ b/desktop/applis/standalones/standalones_pokemon/pom.xml
@@ -19,6 +19,19 @@
 		<finalName>Pokemon</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
@@ -67,8 +80,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>pokemongui</groupId>
-			<artifactId>pokemongui</artifactId>
+			<groupId>def_standalones_pokemon</groupId>
+			<artifactId>def_standalones_pokemon</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
