--- a/desktop/applis/apps/gui/pom.xml
+++ b/desktop/applis/apps/gui/pom.xml
@@ -18,5 +18,6 @@
 		<module>gui_games</module>
 		<module>gui_util</module>
 		<module>applications</module>
+		<module>other</module>
 	</modules>
 </project>
