--- a/desktop/applis/apps/sys_apps/def_standalones/pom.xml
+++ b/desktop/applis/apps/sys_apps/def_standalones/pom.xml
@@ -22,6 +22,11 @@
 	</modules>
 	<dependencies>
 		<dependency>
+			<groupId>def_fact</groupId>
+			<artifactId>def_fact</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>infos</groupId>
 			<artifactId>infos</artifactId>
 			<version>1.0-SNAPSHOT</version>
