--- a/desktop/applis/apps/gui/other/pom.xml
+++ b/desktop/applis/apps/gui/other/pom.xml
@@ -7,6 +7,9 @@
         <artifactId>gui</artifactId>
         <version>2.0</version>
     </parent>
+	<properties>
+		<jdk.version>1.8</jdk.version>
+	</properties>
 	<groupId>other</groupId>
 	<artifactId>other</artifactId>
 	<version>1.0-SNAPSHOT</version>
