--- a/desktop/applis/apps/sys_apps/def_fact/pom.xml
+++ b/desktop/applis/apps/sys_apps/def_fact/pom.xml
@@ -8,24 +8,14 @@
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>def</groupId>
-	<artifactId>def</artifactId>
+	<groupId>def_fact</groupId>
+	<artifactId>def_fact</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>infos</groupId>
-			<artifactId>infos</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>def_fact</groupId>
-			<artifactId>def_fact</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>applications</groupId>
-			<artifactId>applications</artifactId>
+			<groupId>guicommon</groupId>
+			<artifactId>guicommon</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
