--- a/desktop/applis/apps/sys_apps/other_fact/pom.xml
+++ b/desktop/applis/apps/sys_apps/other_fact/pom.xml
@@ -8,24 +8,17 @@
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>def</groupId>
-	<artifactId>def</artifactId>
+	<groupId>other_fact</groupId>
+	<artifactId>other_fact</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<properties>
+		<jdk.version>1.8</jdk.version>
+	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>infos</groupId>
-			<artifactId>infos</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>def_fact</groupId>
-			<artifactId>def_fact</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>applications</groupId>
-			<artifactId>applications</artifactId>
+			<groupId>other</groupId>
+			<artifactId>other</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
