--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
@@ -387,6 +387,12 @@ PaintAdd=ajout
 CompBack=arriere
 CompFore=avant
 Render=$coeur.Rendu
+ListHeight=$coeur.ListeHauteur
+ListHeightPaintEvent=hauteur
+ListWidth=$coeur.ListeLargeur
+ListWidthPaintEvent=largeur
+ListPaint=$coeur.ListePeindre
+ListPaintPaintEvent=peindreEvt
 ColorRed=r
 TextAreaSetSelectionStart=majDebutSelection
 ActionListener0ActionPerformed0=a
@@ -413,6 +419,14 @@ WindowListener0WindowActivated0=a
 WindowListener0WindowDeactivated0=a
 ListSelection0ValueChanged0=a
 ListSelection0ValueChanged1=b
+ListPaint0HeightEvent0=a
+ListPaint0WidthEvent0=a
+ListPaint0WidthEvent1=b
+ListPaint0PaintEvent0=a
+ListPaint0PaintEvent1=b
+ListPaint0PaintEvent2=c
+ListPaint0PaintEvent3=d
+ListPaint0PaintEvent4=e
 Paint0PaintMethod0=a
 Paint0TabbedPaneAdd0=a
 Paint0TabbedPaneAdd1=b
