--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
@@ -350,6 +350,12 @@ CompLoc=loc
 KeyEvent=$core.KeyEvent
 Color=$core.Color
 Render=$core.Render
+ListHeight=$core.ListHeight
+ListHeightPaintEvent=height
+ListWidth=$core.ListWidth
+ListWidthPaintEvent=width
+ListPaint=$core.ListPainting
+ListPaintPaintEvent=paintEvent
 Radio=$core.Radio
 TextArea=$core.TextArea
 ColorRed=r
@@ -413,6 +419,14 @@ WindowListener0WindowActivated0=a
 WindowListener0WindowDeactivated0=a
 ListSelection0ValueChanged0=a
 ListSelection0ValueChanged1=b
+ListPaint0HeightEvent0=a
+ListPaint0WidthEvent0=a
+ListPaint0WidthEvent1=b
+ListPaint0PaintEvent0=a
+ListPaint0PaintEvent1=b
+ListPaint0PaintEvent2=c
+ListPaint0PaintEvent3=d
+ListPaint0PaintEvent4=e
 Paint0PaintMethod0=a
 Paint0TabbedPaneAdd0=a
 Paint0TabbedPaneAdd1=b
