--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
@@ -376,6 +376,7 @@ ImageGet=get
 Count=count
 Image=$core.Image
 PaintAdd=add
+PaintSet=set
 Combo=$core.ComboBox
 Dispose=dispose
 Font=$core.Font
@@ -428,6 +429,9 @@ ListPaint0PaintEvent2=c
 ListPaint0PaintEvent3=d
 ListPaint0PaintEvent4=e
 Paint0PaintMethod0=a
+Paint0TabbedPaneSet0=a
+Paint0TabbedPaneSet1=b
+Paint0TabbedPaneSet2=c
 Paint0TabbedPaneAdd0=a
 Paint0TabbedPaneAdd1=b
 Paint0TabbedPaneAdd2=c
@@ -704,6 +708,8 @@ GrList1TabbedPaneAdd2=c
 GrList0TreeNodeSetUserObject0=a
 GrList0TreeNodeSetUserObject1=b
 GrList0TreeNodeSetUserObject2=c
+GrList1TreeNodeSetUserObject0=a
+GrList1TreeNodeSetUserObject1=b
 GrList0GrListSetSelectedIndexes0=a
 GrList0RemoveCompo0=a
 GrList0GrList0=a
