--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
@@ -384,6 +384,7 @@ Slider=$coeur.CurseurBarre
 ImageSet=maj
 Font=$coeur.Police
 PaintAdd=ajout
+PaintSet=maj
 CompBack=arriere
 CompFore=avant
 Render=$coeur.Rendu
@@ -428,6 +429,9 @@ ListPaint0PaintEvent2=c
 ListPaint0PaintEvent3=d
 ListPaint0PaintEvent4=e
 Paint0PaintMethod0=a
+Paint0TabbedPaneSet0=a
+Paint0TabbedPaneSet1=b
+Paint0TabbedPaneSet2=c
 Paint0TabbedPaneAdd0=a
 Paint0TabbedPaneAdd1=b
 Paint0TabbedPaneAdd2=c
@@ -704,6 +708,8 @@ GrList1TabbedPaneAdd2=c
 GrList0TreeNodeSetUserObject0=a
 GrList0TreeNodeSetUserObject1=b
 GrList0TreeNodeSetUserObject2=c
+GrList1TreeNodeSetUserObject0=a
+GrList1TreeNodeSetUserObject1=b
 GrList0GrListSetSelectedIndexes0=a
 GrList0RemoveCompo0=a
 GrList0GrList0=a
