--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
@@ -173,6 +173,7 @@ TabbedPaneSetTitle=majTitre
 TabbedPane=$coeur.Onglets
 SetLabelImage=majImage
 PaintRefresh=rafraichir
+PaintRefreshOne=rafraichirUn
 TabbedPaneAdd=ajout
 TabbedPaneSet=maj
 TabbedPaneRemove=suppr
@@ -388,12 +389,10 @@ PaintSet=maj
 CompBack=arriere
 CompFore=avant
 Render=$coeur.Rendu
-ListHeight=$coeur.ListeHauteur
-ListHeightPaintEvent=hauteur
-ListWidth=$coeur.ListeLargeur
-ListWidthPaintEvent=largeur
 ListPaint=$coeur.ListePeindre
 ListPaintPaintEvent=peindreEvt
+ListDim=$coeur.ListeDim
+ListDimPaintEvent=dimEvt
 ColorRed=r
 TextAreaSetSelectionStart=majDebutSelection
 ActionListener0ActionPerformed0=a
@@ -420,14 +419,16 @@ WindowListener0WindowActivated0=a
 WindowListener0WindowDeactivated0=a
 ListSelection0ValueChanged0=a
 ListSelection0ValueChanged1=b
-ListPaint0HeightEvent0=a
-ListPaint0WidthEvent0=a
-ListPaint0WidthEvent1=b
 ListPaint0PaintEvent0=a
 ListPaint0PaintEvent1=b
 ListPaint0PaintEvent2=c
 ListPaint0PaintEvent3=d
 ListPaint0PaintEvent4=e
+ListPaint0DimEvent0=a
+ListPaint0DimEvent1=b
+ListPaint0DimEvent2=c
+ListPaint0DimEvent3=d
+ListPaint0DimEvent4=e
 Paint0PaintMethod0=a
 Paint0TabbedPaneSet0=a
 Paint0TabbedPaneSet1=b
@@ -438,6 +439,12 @@ Paint0TabbedPaneAdd2=c
 Paint1TabbedPaneAdd0=a
 Paint1TabbedPaneAdd1=b
 Paint0PaintRefresh0=a
+Paint0PaintRefreshOne0=a
+Paint0PaintRefreshOne1=b
+Paint0PaintRefreshOne2=c
+Paint0PaintRefreshOne3=d
+Paint0PaintRefreshOne4=e
+Paint0PaintRefreshOne5=f
 WindowType0SetContent0=a
 WindowType0WindowTypeRelative0=a
 WindowType0ComponentSetVisible0=a
