add alias for reflect wrapping lambdas

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -232,6 +232,7 @@ IsNormal=isNormal
 GetClass=getClass
 IsEnum=isEnum
 Init=init
+TryWrap=tryWrap
 IsStatic=isStatic
 IsStaticCall=isStaticCall
 IsInstanceMethod=isInstanceMethod
