--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -234,6 +234,7 @@ Invoke=invoque
 IsPublic=estPublic
 GetName=valNom
 Init=init
+TryWrap=essaiEnvel
 ForName=parNom
 Method=$coeur.Methode
 SetField=maj
