--- a/desktop/applis/apps/gui/other/pom.xml
+++ b/desktop/applis/apps/gui/other/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>guicommon</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>adv</groupId>
+			<artifactId>adv</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
