--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -978,6 +978,7 @@ ClassType0ArrayGet1=b
 ClassType0ArraySet0=a
 ClassType0ArraySet1=b
 ClassType0ArraySet2=c
+ClassType0TryWrap0=a
 Constructor0NewInstance0=a
 Field0GetField0=a
 Field0SetField0=a
