add nano time alias

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -368,6 +368,7 @@ FileGetName=name
 CurrentThread=currentThread
 ReentrantLock=$core.ReentrantLock
 ThreadCurrentTime=currentTime
+ThreadCurrentNanoTime=currentTimeNanos
 ThreadExitHook=exitHook
 SetAtomic=setValue
 CompareAndSetAtomic=compareAndSet
