--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -361,6 +361,7 @@ FormatType=$coeur.Formattage
 GetAtomic=valeur
 CurrentThread=tacheCourante
 ThreadCurrentTime=instant
+ThreadCurrentNanoTime=instantNanos
 FileIsDirectory=estDossier
 FileIsFile=estFichier
 FileRoots=racines
