--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
@@ -174,9 +174,13 @@ TabbedPane=$core.TabbedPane
 GetIndexCompo=get
 PanelAbsolute=absolute
 AddListener=addList
+RemoveListener=removeList
+GetListeners=getLists
 AddWindowListener=addWindowListener
 TextAreaSetSelectionStart=setSelectionStart
 AddWheelListener=addWheel
+RemoveWheelListener=removeWheel
+GetWheelListeners=getWheels
 WheelMove=mouseWheelMoved
 CompGetSecondPos=y
 KeyEventChar=keyChar
@@ -200,6 +204,8 @@ KeyEventCode=keyCode
 MouseEventIsCtrl=isCtrl
 KeyEventIsCtrl=isCtrl
 AddKeyListener=addKey
+RemoveKeyListener=removeKey
+GetKeyListeners=getKeys
 CompBorRaise=raise
 WindowListener=$core.WindowListener
 CompGetFirstPos=x
@@ -520,6 +526,9 @@ Component0ComponentInvokeLater0=a
 Component0AddKeyListener0=a
 Component0AddWheelListener0=a
 Component0AddListener0=a
+Component0RemoveKeyListener0=a
+Component0RemoveWheelListener0=a
+Component0RemoveListener0=a
 Dimension0Dimension0=a
 Dimension0Dimension1=b
 Dimension1Dimension0=a
