--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
@@ -163,6 +163,8 @@ TabbedPaneSelIndex=selIndice
 PanelPageBox=page
 PanelValidate=valider
 AddListener=ajEcout
+RemoveListener=supprEcout
+GetListeners=valEcouts
 TabbedPaneGet=val
 AddWindowListener=ajFenetreEcout
 SetLabelText=majTexte
@@ -217,10 +219,14 @@ KeyEventIsCtrl=estCtrl
 MouseEventIsRight=estDroite
 CompBorTitle=titre
 AddWheelListener=ajMolette
+RemoveWheelListener=supprMolette
+GetWheelListeners=valMolettes
 WheelListener=$coeur.MoletteSourisEcouteur
 CompOpaque=opaque
 CompBorLower=bas
 AddKeyListener=ajClavier
+RemoveKeyListener=supprClavier
+GetKeyListeners=valClaviers
 GrListGetVisibleRowCount=valNbLignesVisible
 GrListClear=toutSuppr
 GrListGetListView=valVue
@@ -520,6 +526,9 @@ Component0ComponentInvokeLater0=a
 Component0AddKeyListener0=a
 Component0AddWheelListener0=a
 Component0AddListener0=a
+Component0RemoveKeyListener0=a
+Component0RemoveWheelListener0=a
+Component0RemoveListener0=a
 Dimension0Dimension0=a
 Dimension0Dimension1=b
 Dimension1Dimension0=a
