--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -422,6 +422,7 @@ ThreadSetAdd=add
 ThreadSetContains=contains
 ThreadSetRemove=remove
 ThreadSetSnapshot=snapshot
+ThreadEq=tEq
 Start=start
 ExecuteConvert=convert
 AssertAssert=assert
@@ -1024,6 +1025,8 @@ Thread2Print0=a
 Thread2Print1=b
 Thread0ThreadExitHook0=a
 Thread0Thread0=a
+Thread0ThreadEq0=a
+Thread0ThreadEq1=b
 ThreadSet0ThreadSetAdd0=a
 ThreadSet0ThreadSetContains0=a
 ThreadSet0ThreadSetRemove0=a
