--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -425,6 +425,7 @@ ParametersLocation=location
 ExecuteTests=tests
 ResultFailMessage=messageErreur
 Runnable=$coeur.Executable
+ThreadEq=tEq
 Start=demarrer
 Thread=$coeur.Tache
 ThreadSet=$coeur.EnsTache
@@ -1024,6 +1025,8 @@ Thread2Print0=a
 Thread2Print1=b
 Thread0ThreadExitHook0=a
 Thread0Thread0=a
+Thread0ThreadEq0=a
+Thread0ThreadEq1=b
 ThreadSet0ThreadSetAdd0=a
 ThreadSet0ThreadSetContains0=a
 ThreadSet0ThreadSetRemove0=a
