--- a/desktop/applis/apps/core/pom.xml
+++ b/desktop/applis/apps/core/pom.xml
@@ -15,7 +15,8 @@
 		<module>common</module>
 		<module>games</module>
 		<module>adv</module>
-	</modules>
+        <module>scripts</module>
+    </modules>
 	<build>
 		<plugins>
 			<plugin>
