--- a/desktop/applis/apps/gui/gui_games/cardgamesgui/pom.xml
+++ b/desktop/applis/apps/gui/gui_games/cardgamesgui/pom.xml
@@ -38,5 +38,10 @@
 			<artifactId>network</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>scripts_core</groupId>
+			<artifactId>scripts_core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
