--- a/desktop/applis/apps/bean/bean_games/presidentbean/pom.xml
+++ b/desktop/applis/apps/bean/bean_games/presidentbean/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>formathtml</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>scripts_core</groupId>
+			<artifactId>scripts_core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
