--- a/desktop/applis/apps/bean/bean_games/tarotbean/pom.xml
+++ b/desktop/applis/apps/bean/bean_games/tarotbean/pom.xml
@@ -32,5 +32,10 @@
 			<artifactId>formatconst</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>scripts_core</groupId>
+			<artifactId>scripts_core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
