--- a/desktop/applis/apps/files/files_games/cardgamesunion/pom.xml
+++ b/desktop/applis/apps/files/files_games/cardgamesunion/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>stream</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>scripts_core</groupId>
+            <artifactId>scripts_core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
