--- a/desktop/applis/apps/apps_sml/sml_games/pokemonsml/pom.xml
+++ b/desktop/applis/apps/apps_sml/sml_games/pokemonsml/pom.xml
@@ -34,5 +34,10 @@
 			<artifactId>scripts_game</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>scripts_core</groupId>
+            <artifactId>scripts_core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
