--- a/desktop/applis/apps/gui/guicommon/pom.xml
+++ b/desktop/applis/apps/gui/guicommon/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>mathssml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>scripts_core</groupId>
+            <artifactId>scripts_core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
