--- a/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>streamcore</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>scripts_core</groupId>
+            <artifactId>scripts_core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
