--- a/desktop/applis/apps/core/pom.xml
+++ b/desktop/applis/apps/core/pom.xml
@@ -26,6 +26,7 @@
 				<configuration>
 					<junitArtifactName>junit:junit</junitArtifactName>
 					<argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
+					<trimStackTrace>false</trimStackTrace>
 				</configuration>
 			</plugin>
 			<plugin>
