--- a/desktop/applis/apps/core/scripts/scripts_core/pom.xml
+++ b/desktop/applis/apps/core/scripts/scripts_core/pom.xml
@@ -20,5 +20,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <properties>
+        <sonar.exclusions>src/main/java/**/*</sonar.exclusions>
+    </properties>
 
 </project>
