--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -10,4 +10,12 @@
 	<modules>
 		<module>applis</module>
 	</modules>
+	<properties>
+		<sonar.issue.ignore.multicriteria>e1</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria.e1.ruleKey>squid:S117</sonar.issue.ignore.multicriteria.e1.ruleKey>
+		<sonar.issue.ignore.multicriteria.e1.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
+		<sonar.issue.ignore.multicriteria>e2</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria.e2.ruleKey>squid:CommentedOutCodeLine</sonar.issue.ignore.multicriteria.e2.ruleKey>
+		<sonar.issue.ignore.multicriteria.e2.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e2.resourceKey>
+	</properties>
 </project>
